<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/hard_black"
    tools:context=".ui.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="25dp">
                <ImageView
                    android:id="@+id/detail_iv_poster"
                    android:layout_width="150dp"
                    android:layout_height="220dp"
                    android:background="@color/black"
                    android:src="@drawable/ic_launcher_foreground"
                    android:contentDescription="@string/movie_poster" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="20dp">
                    <TextView
                        android:id="@+id/detail_tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/yellow"
                        android:textSize="22sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/original_title"
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/detail_tv_ori_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_year"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/detail_tv_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/original_language"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/detail_tv_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/background_rating"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:padding="15dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/detail_tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textStyle="bold"
                    tools:text="Lorem Ipsum"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/detail_iv_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite_border"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/detail_tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/detail_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_disabled"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>