<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite_btn"
        android:icon="@drawable/ic_favorite"
        android:title=""
        android:iconTint="@color/white"
        app:showAsAction="always"/>
</menu>